# PaperMate

./: .dockerignore  .env.example  .gitignore  DOCKER  DOCKER.md  Dockerfile  ES_MIGRATION_PLAN.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  langgraph.json  main.py  pyproject.toml
app/: config.py  main.py
app/agent/: chat_agent.py  contracts.py  graph.py  multi_agent_graph.py  state.py
app/api/: auth.py  chat.py  deps.py  paper.py
app/business/: auth.py  chat_request.py  exceptions.py  paper_analysis.py  paper_file.py  paper_metadata.py  search_knowledge_input.py  user.py
app/core/: checkpointer.py  factory.py  logger.py
app/model/: __init__.py  factory.py  request.py
app/models/: __init__.py
app/services/: auth_service.py  chat_service.py  es_service.py  paper_analysis_service.py  paper_metadata_service.py  paper_section_service.py  paper_store_service.py  quota_service.py  rag_service.py  stream_registry.py  vector_store_service.py
app/utils/: checkpointer.py  checkpointer_handler.py  config_handler.py  db_handler.py  exception_handler.py  file_handler.py  logger.py  logger_handler.py  migration_multiagent.py  migration_single_agent.py  migration_v2_blueprint.py  multi_agent_utils.py  path_tool.py  prompt_loader.py  security.py
config/: agent.yaml  chroma.yaml  es.yaml  prompt.yaml
docker/: es.Dockerfile
docs/: PROJECT_REPORT.md
eval/: README.md  __init__.py  _ragas_compat.py  metrics.py  run_single.py  seed_sandbox.py  trace_collector.py
eval/datasets/: rag_single.json  rag_single_traces.json  sandbox_paper_file.json  sandbox_paper_metadata.json  sandbox_pointcloud.json  smoke.json
eval/reports/: rag_demo.csv  rag_demo.md  rag_reuse.csv  rag_reuse.md  (+6 more)
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
infra/: es.Dockerfile
nginx/: nginx.conf
prompts/: editor.txt  paper_metadata_extraction.txt  planner.txt  rag_summarize_prompt.txt  researcher.txt  section_writer.txt  summary_prompt.txt  system_prompt.txt
static/: app.js  index.html  style.css
(+57 files in other folders)
