[project]
name = "rocomate"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.27",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.14.1",
    "lru-cache>=0.2.3",
    "checkpointer>=2.14.11",
    "path>=17.1.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
