[project]
name = "papermate"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "langchain>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.14.1",
    "langchain-community>=0.4.2",
    "dashscope>=1.25.21",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "langchain-core>=1.3.0",
    "langgraph>=1.0.0",
    "pypdf>=6.13.2",
    "langchain-openai>=1.2.2",
    "elasticsearch>=8.13,<9",
    "python-multipart>=0.0.18",
    "requests>=2.32",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.27",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
